Fading workspace switcher stuck on screen with current gnome-3-38/HEAD
Affected version
- Fedora 33
- mutter@gnome-3-38
- gnome-shell@gnome-3-38
- Wayland
- Single 2560x1440 screen at 200% scale
Bug summary
With the current gnome-3-38 HEAD (commit a4382131) of mutter, the workspace switcher overlay sometimes gets stuck on the screen after switching workspaces until something else triggers an update of the screen's contents. The bug was not present in 3.38.1. gnome-shell at gnome-3-38/HEAD together with mutter 3.38.1 works fine, so this is likely a mutter issue. I haven't done a git bisect.
Steps to reproduce
- Switch workspaces using the keyboard shortcuts (perhaps a few times)
- Eventually you'll see that the fading animation of the workspace switcher doesn't complete and is stuck on the screen
- Clicking something will make it go away
Perhaps use something with a white background to make the issue more visible (make sure you don't use an application that posts any visual updates though).
Relevant logs, screenshots, screencasts etc.
The problem goes away when trying to make a screenshot.